@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-10-04T01:50:02Z",
-  "count_outdated" : 273,
-  "uniques_outdated" : 239,
-  "count" : 274,
-  "uniques" : 240,
+  "timestamp" : "2025-10-08T01:54:59Z",
+  "count_outdated" : 274,
+  "uniques_outdated" : 240,
+  "count" : 275,
+  "uniques" : 241,
   "clones" : [
     {
-      "timestamp": "2025-09-21T00:00:00Z",
+      "timestamp": "2025-10-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
